--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -7,8 +7,11 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    align-items: center;    
+    align-items: center;       
     gap: 20px;
+    position: relative;
+    padding: 30px 0px;    
+    z-index: 4;
     
 }
 
