--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
 @import url(../css/global.css);
 @import url(../css/header.css);
 @import url(../css/banner.css);
+@import url(../css/tecnologia.css);
