--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,6 @@
 @import url(../css/header.css);
 @import url(../css/banner.css);
 @import url(../css/tecnologia.css);
+@import url(../css/escolha.css);
+@import url(../css/depoimento.css);
+@import url(../css/garantia.css);
