sessão garantia personalizada finalizada

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,4 @@
 @import url(../css/escolha.css);
 @import url(../css/depoimento.css);
 @import url(../css/garantia.css);
+@import url(../css/footer.css);
