--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -7,8 +7,7 @@
 .banner-principal{
     display: grid;
     grid-template-columns: 1fr 1fr; 
-    align-items: center;
-    
+    align-items: center;    
     gap: 100px;        
 }
 
@@ -42,5 +41,15 @@
     cursor: pointer;
     text-transform: uppercase;
     font-size: 1.125rem;
+}
+
+@media (max-width: 800px){
+   .banner-principal {
+    grid-template-columns: 1fr;
+   }
+
+   .banner-imagem{
+    margin-top: 120px;
+   }
 }
 
