--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -21,8 +21,8 @@
 
 .header-logo{
     color: #F4F4F4;
-    font-family: 'Yellowtail', cursive;
-    font-size: 3rem;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 4rem;
 }
 
 .header-lista{
