--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -43,13 +43,26 @@
     font-size: 1.125rem;
 }
 
+@media (max-width: 650px){
+    .banner-contexto{
+        margin-top: 20px;
+    }
+    .banner-imagem{
+        margin-bottom: -100px;
+    }
+}
+
 @media (max-width: 800px){
+    .banner-contexto{
+        margin-top: 150px;
+    }
    .banner-principal {
     grid-template-columns: 1fr;
    }
 
    .banner-imagem{
-    margin-top: 120px;
+    margin-top: 120px; 
+      
    }
 }
 
