--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -53,6 +53,12 @@
     width: 100%;
 }
 
+@media (max-width:500px){
+    .header-container{
+        margin: 0 auto;
+    }
+}
+
 @media (max-width: 600px){
     .header-flex{
         flex-direction: column;
